--- a/css/styles.scss
+++ b/css/styles.scss
@@ -4,6 +4,7 @@
 @import 'modules/header';
 @import 'modules/hero';
 @import 'modules/menu';
+@import 'modules/card';
 @import 'modules/dashboard';
 @import 'modules/calendar';
 @import 'modules/modals';
